--- a/dicee.html
+++ b/dicee.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
     
   </head>
@@ -29,7 +29,7 @@
       <button type="button"><em>Play</em></button>
     </div> -->
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 
   <footer>
